--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        testcase: [ocp4_latest]
+        testcase: [ocp4_latest_gitops]
       fail-fast: false
 
     env:
